# tts

./: app.py  app_last_runb.py  app_old_new.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_my-streamlit-app.yml  test_coca-cola-test.yml
old_files/: app_old.py
src/: fuzzy_search.py  performance_manager.py  response_manager.py  session_manager.py  state.py  synapse_agent.py  synapse_connection.py  system_prompts.py
styles/: css.py
utils/: helper_components.py
